--- a/tenant-feedback.html
+++ b/tenant-feedback.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled (Backup 1684118208704) (Backup 1684735934896)</title>
+    <title>BIOME</title>
+    <link rel="icon" href="assets/img/logoSmol.png" type="image/png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
+    <link rel="stylesheet" href="assets/css/montserrat.css">
     <link rel="stylesheet" href="assets/css/Collapse-card.css">
     <link rel="stylesheet" href="assets/css/Forum---Thread-listing-forum.css">
     <link rel="stylesheet" href="assets/css/Forum---Thread-listing.css">
@@ -35,9 +36,10 @@
             </div><img src="assets/img/ATLAS%20Logo.svg" width="136.8" height="42" style="margin: 5px;width: 136.8px;margin-right: 59px;" />
         </div>
     </nav>
+
     <aside class="float-start sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl" id="sidenav-main" style="padding-left: 6px;margin: 28px 0px;/*margin-bottom: 0px;*/margin-right: 0px;font-size: 18px;width: 250px;display: flex;align-content: flex-start;background: #ffffffb6;margin-left: 0px;margin-top: 95px;padding-right: 0px;border-top-left-radius: 0px;border-bottom-left-radius: 0px;min-width: 227px;height: 880px;"><strong style="width: 97px;display: flex;padding-left: 9px;padding-top: 10px;">Filter</strong>
         <ul class="navbar-nav" style="position: relative;">
-            <li class="nav-item" style="font-size: 18px;"><a class="nav-link" href=""><span class="nav-link-text ms-1" style="font-size: 16px;min-width: 135px;">Combined</span><span class="badge rounded-pill bg-primary" style="--bs-primary: #ff3333;--bs-primary-rgb: 255,51,51;">42</span></a></li>
+            <li class="nav-item" style="font-size: 18px;"><a class="nav-link" href=""><span class="nav-link-text ms-1" style="font-size: 16px;min-width: 135px;">Combined</span><span class="badge rounded-pill bg-primary combined-list-count" style="--bs-primary: #ff3333;--bs-primary-rgb: 255,51,51;">42</span></a></li>
         </ul>
         <div><a class="btn btn-primary" data-bs-toggle="collapse" aria-expanded="true" aria-controls="collapse-2" href="#collapse-2" role="button" style="background: rgba(255,255,255,0);color: rgb(74,74,74);--bs-primary: #6d6d6d;--bs-primary-rgb: 109,109,109;min-width: 218.75px;text-align: left;border-style: none;border-color: rgb(255,255,255);">By Tenant</a>
             <div class="collapse show" id="collapse-2" style="height: 830px;">
@@ -49,54 +51,60 @@
                         <li class="nav-item"><a class="nav-link" href=""><span class="nav-link-text ms-1" style="font-size: 16px;min-width: 135px;">KLIPP Friseur</span><span class="badge rounded-pill bg-primary" style="--bs-primary: #4ad927;--bs-primary-rgb: 74,217,39;background: rgb(152,136,106);color: rgb(74,217,39);">42</span></a></li>
                         <li class="nav-item"><a class="nav-link" href=""><span class="nav-link-text ms-1" style="font-size: 16px;min-width: 135px;">CEYOND Group</span><span class="badge rounded-pill bg-primary" style="--bs-primary: #4ad927;--bs-primary-rgb: 74,217,39;background: rgb(152,136,106);color: rgb(74,217,39);">42</span></a></li>
                         <li class="nav-item"><a class="nav-link" href=""><span class="nav-link-text ms-1" style="font-size: 16px;min-width: 135px;">Eggers &amp; Franke</span><span class="badge rounded-pill bg-primary" style="--bs-primary: #4ad927;--bs-primary-rgb: 74,217,39;background: rgb(152,136,106);color: rgb(74,217,39);">42</span></a></li>
-                        <li class="nav-item"><a class="nav-link active" href=""><span class="nav-link-text ms-1" style="font-size: 16px;min-width: 135px;">d.School</span><span class="badge rounded-pill bg-primary" style="--bs-primary: #ff3333;--bs-primary-rgb: 255,51,51;">42</span></a></li>
+                        <li class="nav-item"><a class="nav-link active" href=""><span class="nav-link-text ms-1" style="font-size: 16px;min-width: 135px;">d.School</span><span class="badge rounded-pill bg-primary combined-list-count" style="--bs-primary: #ff3333;--bs-primary-rgb: 255,51,51;">42</span></a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </aside>
-    <div id="Alerts" style="border-radius: 21px;margin-top: 95px;width: 1057px;max-width: 632px;height: 880px;position: fixed;border: 10.5px solid rgb(255,108,108);background: rgba(255,255,255,0.71);margin-left: 255px;">
+
+    <div class="shadow mb-3" id="Alerts" style="border-radius: 21px;margin-top: 95px;width: 1057px;max-width: 632px;height: 880px;position: fixed;border: 10.5px solid rgb(255,108,108);background: rgba(255,255,255,0.71);margin-left: 255px;">
         <div class="container" style="position: fixed;margin: 0;max-height: 700px;overflow: auto;padding: 10px;max-width: 632px;width: 100%;">
             <div class="row" style="margin: 0;width: 100%;">
                 <div class="col-md-12" style="width: 100%;">
                     <div>
                         <ul class="nav nav-tabs" role="tablist" style="position: fixed;background: rgba(255,255,255,0);width: 579px;font-family: Montserrat, sans-serif;">
-                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#tab-1" style="border-top-left-radius: 10px;border-top-right-radius: 10px;">Pre-Set Requests&nbsp;&nbsp;<span class="badge rounded-pill bg-primary" style="--bs-primary: #ff3333;--bs-primary-rgb: 255,51,51;">42</span></a></li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#tab-2">Complaints&nbsp;&nbsp;<span class="badge rounded-pill bg-primary" style="--bs-primary: #ffc107;--bs-primary-rgb: 255,193,7;">42</span></a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#tab-1" style="border-top-left-radius: 10px;border-top-right-radius: 10px;">Pre-Set Requests&nbsp;&nbsp;<span class="badge rounded-pill bg-primary preSet-list-count" style="--bs-primary: #ff3333;--bs-primary-rgb: 255,51,51;">42</span></a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#tab-2">Complaints&nbsp;&nbsp;<span class="badge rounded-pill bg-primary complaints-list-count" style="--bs-primary: #ffc107;--bs-primary-rgb: 255,193,7;">42</span></a></li>
                         </ul>
                         <div class="tab-content" style="overflow: scroll;overflow-y: scroll;overflow-x: auto;">
                             <div class="tab-pane active" role="tabpanel" id="tab-1">
                                 <div class="thread-list-head" style="padding-top: 30px;font-family: Montserrat, sans-serif;">
-                                    <ul class="thread-list" style="overflow: hidden;overflow-y: scroll;">
-                                        <li class="thread" style="padding-top: 25px;"><span class="time">Apr 21</span><span class="title">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>CO2, Temperature, Humidity</strong></span></li>
-                                        <li class="thread" style="padding-top: 25px;"><span class="time">Apr 20</span><span class="title">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>CO2, Temperature, Humidity</strong></span></li>
-                                        <li class="thread" style="padding-top: 25px;"><span class="time">Apr 20</span><span class="title">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>CO2, Temperature, Humidity</strong></span></li>
-                                        <li class="thread" style="padding-top: 25px;"><span class="time">Apr 18</span><span class="title">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>CO2, Temperature, Humidity</strong></span></li>
-                                        <li class="thread" style="padding-top: 25px;"><span class="time">Apr 17</span><span class="title">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>CO2, Temperature, Humidity</strong></span></li>
-                                        <li class="thread" style="padding-top: 25px;"><span class="time">Apr 19</span><span class="title">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>CO2, Temperature, Humidity</strong></span></li>
-                                        <li class="thread" style="padding-top: 25px;"><span class="time">Apr 17</span><span class="title">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>CO2, Temperature, Humidity</strong></span></li>
-                                        <li class="thread" style="padding-top: 25px;"><span class="time">Apr 15</span><span class="title">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>CO2, Temperature, Humidity</strong></span></li>
-                                        <li class="thread" style="padding-top: 25px;"><span class="time">Mar 23</span><span class="title">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>CO2, Temperature, Humidity</strong></span></li>
-                                        <li class="thread" style="padding-top: 25px;"><span class="time">Mar 21</span><span class="title">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>CO2, Temperature, Humidity</strong></span></li>
-                                        <li class="thread" style="padding-top: 25px;"><span class="time">Mar 2</span><span class="title">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>CO2, Temperature, Humidity</strong></span></li>
+                                    <ul id="preSet" class="thread-list" style="overflow: hidden;overflow-y: scroll;">
+                                        <!-- Pre-Set Requests will be inserted here -->
+                                    </ul>
+                                    <script src="tenant-feedback.js"></script> 
+                                </div>
+                            </div>
+                            <div class="tab-pane" role="tabpanel" id="tab-2">
+                                <div class="thread-list-head" style="padding-top: 30px;font-family: Montserrat, sans-serif;">
+                                    <ul id="complaints" class="thread-list" style="overflow: hidden;overflow-y: scroll;">
+                                        <!-- Complaints will be inserted here -->
                                     </ul>
                                 </div>
                             </div>
-                            <div class="tab-pane" role="tabpanel" id="tab-2"></div>
-                            <div class="tab-pane" role="tabpanel" id="tab-3"></div>
-                            <div class="tab-pane" role="tabpanel" id="tab-4"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div id="Alerts-1" style="border-radius: 21px;margin-top: 95px;margin-right: 5px;margin-left: 912px;width: 1102px;max-width: 571px;height: 880px;position: fixed;background: rgba(255,255,255,0.71);border: 10.5px solid #2990a7;">
+
+    <div class="shadow mb-3" id="Alerts-1" style="border-radius: 21px;margin-top: 95px;margin-right: 5px;margin-left: 912px;width: 1102px;max-width: 571px;height: 880px;position: fixed;background: rgba(255,255,255,0.71);border: 10.5px solid #2990a7;">
         <div class="row text-center justify-content-center align-items-center">
-            <div class="col-xxl-11" style="font-size: 17px;padding-top: 8px;padding-bottom: 15px;border-top-left-radius: 16px;background: #2990a7;border-top-right-radius: 16px;width: 90%;min-width: 571px;"><span class="time" style="color: rgb(255,255,255);font-family: Montserrat, sans-serif;"><strong>Apr 21</strong>&nbsp; &nbsp; &nbsp; &nbsp;</span><span class="title" style="color: rgb(255,255,255);font-family: Montserrat, sans-serif;">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<span style="font-weight: normal !important;">CO2, Temperature, Humidity</span></span></div>
+            <div class="col-xxl-11" style="font-size: 17px;padding-top: 8px;padding-bottom: 15px;border-top-left-radius: 16px;background: #2990a7;border-top-right-radius: 16px;width: 90%;min-width: 571px;">
+                <span class="time" style="color: rgb(255,255,255);font-family: Montserrat, sans-serif;"><strong>Apr 21</strong>&nbsp; &nbsp; &nbsp; &nbsp;</span>
+                <span class="title" style="color: rgb(255,255,255);font-family: Montserrat, sans-serif;">Floor 1, Room 202&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<span style="font-weight: normal !important;">CO2, Temperature, Humidity</span></span>
+                <span class="badge rounded-pill bg-primary" style="--bs-primary: #ff3333;--bs-primary-rgb: 255,51,51;font-size: 0px;width: 5px;height: 5px;background: rgb(255,51,51);display: none;"></span>
+            </div>
         </div>
-        <p style="padding: 10px;">Paragraph</p>
+        <p id="alertDetails" style="padding: 10px;font-family: Montserrat, sans-serif;font-size: large"></p>
+        <div class="text-center">
+            <button class="btn btn-primary btn-sm" style="font-family: Montserrat, sans-serif;border-radius: 25.5px;background: rgb(41,144,167);border-style: none;height: 31.375px;width: 150px;font-size: 13px;color: rgb(255,255,255);padding-top: 3.5px;margin-right: 10px;" id="markResolvedButton" onclick="toggleResolved()">Mark as Resolved</button>
+            <button class="btn btn-primary btn-sm" style="font-family: Montserrat, sans-serif;border-radius: 25.5px;background: rgb(41,144,167);border-style: none;height: 31.375px;width: 150px;font-size: 13px;color: rgb(255,255,255);padding-top: 3.5px;margin-left: 10px;" id="replyButton" onclick="reply('example@example.com')">Reply</button>
+        </div>
     </div>
+    
     <div class="container" style="padding: 5px 5px 0px;padding-top: 0px;position: fixed;max-width: 400px;margin-left: 1510px;margin-top: 95px;margin-bottom: 5px;padding-bottom: 5px;text-align: right;width: 1023px;padding-right: 0;padding-left: 0;border-style: none;">
         <div class="col-lg-12 d-lg-flex justify-content-lg-center" style="max-width: 100%;height: 260px;background: rgba(255,255,255,0);border-style: none;">
             <div class="card shadow mb-3" style="max-width: 100%;background: rgba(255,255,255,0);border-style: none;height: 286px;border-bottom-right-radius: 0px;border-bottom-left-radius: 0px;">
@@ -135,6 +143,7 @@
             </div>
         </div>
     </div>
+
     <div class="container" style="padding: 5px 5px 0px;padding-top: 0px;position: fixed;margin-left: 1495px;margin-top: 399px;margin-bottom: 5px;padding-bottom: 5px;text-align: right;padding-right: 0;padding-left: 0;height: 342px;min-width: 430px;max-width: 430px;border-style: none;">
         <div class="col-lg-12 d-lg-flex justify-content-lg-center" style="max-width: 100%;height: 254px;border-style: none;">
             <div class="card shadow mb-3" style="max-width: 100%;height: 307px;border-bottom-left-radius: 0px;border-bottom-right-radius: 0px;background: rgba(255,255,255,0);border-style: none;">
@@ -162,11 +171,13 @@
             </div>
         </div>
     </div>
-    <div class="container" style="right: 0;padding: 0px 5px 0px;padding-top: 0px;width: 1023px;position: fixed;max-width: 410px;margin-right: 5px;margin-left: 5px;margin-top: 724px;margin-bottom: 5px;padding-bottom: 5px;text-align: right;">
+
+    <!-- <div class="container" style="right: 0;padding: 0px 5px 0px;padding-top: 0px;width: 1023px;position: fixed;max-width: 410px;margin-right: 5px;margin-left: 5px;margin-top: 724px;margin-bottom: 5px;padding-bottom: 5px;text-align: right;">
         <div class="mw-85 d-flex align-items-center text-light" data-bs-toggle="collapse" href="#cardMyCollapse" aria-expanded="false" aria-controls="cardMyCollapse" onclick="rotate(this)" style="padding: 5px;background: #2990a7;border-top-left-radius: 10px;border-top-right-radius: 10px;max-width: 100%;">
             <h4 class="text-truncate fw-normal m-0" style="padding-left: 10px;font-family: Montserrat, sans-serif;--bs-primary: #30ced6;--bs-primary-rgb: 48,206,214;">Weather</h4>
         </div><div id="ww_88cf41ffbf478" v='1.3' loc='id' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":["wl7855"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://wetterlang.de/wien_wetter_30_tage/" id="ww_88cf41ffbf478_u" target="_blank">30 tage wetter Wien</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_88cf41ffbf478"></script>
-    </div>
+    </div> -->
+
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Collapse-card-animations.js"></script>
 </body>
